--- a/index.html
+++ b/index.html
@@ -158,28 +158,16 @@
                 <h1 class="position-absolute text-uppercase text-primary">My Games</h1>
             </div>
             <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <h3 class="mb-4">Tools</h3>
-                    <div class="border-left border-primary pt-2 pl-4 ml-2">
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Witching Hour</h5>
-                            <p class="mb-2"><strong>WolverineSoft Pumpkin Jam</strong> | <small>2022</small></p>
-                            <img class="img-fluid rounded w-100" src="img/treehouse.png" alt="">
-                            <p style="text-align:right;">Made for the WolverineSoft 2022 Pumpkin Jam.</p>
-                        </div>
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Ace of Swords</h5>
-                            <p class="mb-2"><strong>WolverineSoft 2022 Turkey Jam</strong> | <small>2022</small></p>
-                            <img class="img-fluid rounded w-100" src="img/card_back.png" alt="">
-                        </div>
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Legend(s) of Zelda</h5>
-                            <p class="mb-2"><strong>EECS 494 - Project 1</strong> | <small>2023</small></p>
-                            <img class="img-fluid rounded w-100" src="img/aqua.png" alt="">
-                        </div>
+                <div class="col-lg-5 pb-4 pb-lg-0">
+                    <img class="img-fluid rounded w-100" src="images/treehouse.png" alt="">
+                </div>
+                <div class="col-lg-7">
+                    <h3 class="mb-4">Witching Hour</h3>
+                    <p>Made for the WolverineSoft 2022 Pumpkin Jam.</p>
+                    <div class="row mb-3">
+                        <ul class="actions">
+                            <li><a href="https://fonsecap.itch.io/witching-hour" class="button">Play</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
