--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="images/treehouse.png" alt="">
+                    <img class="img-fluid rounded w-100" src="img/treehouse.png" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Witching Hour</h3>
