--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
                 <div class="col-lg-7">
                     <h3 class="mb-4">Witching Hour</h3>
                     <p>Made for the WolverineSoft 2022 Pumpkin Jam.</p>
-                    <ul class="actions">
-                        <li><a href="https://fonsecap.itch.io/witching-hour" class="button">Play</a></li>
-                    </ul>
+                    <a href="https://fonsecap.itch.io/witching-hour" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
         </div>
