--- a/index.html
+++ b/index.html
@@ -169,12 +169,67 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/treehouse.png" alt="">
+                    <img class="img-fluid rounded w-100" src="images/card_back.png" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Witching Hour</h3>
-                    <p>Made for the WolverineSoft 2022 Pumpkin Jam.</p>
-                    <a href="https://fonsecap.itch.io/witching-hour" class="btn btn-outline-primary d-none d-lg-block">Play</a>
+                    <h3 class="mb-4">Ace of Swords</h3>
+                    <p>Made for the WolverineSoft 2022 Turkey Jam.</p>
+                    <a href="https://fonsecap.itch.io/ace-of-swords" class="btn btn-outline-primary d-none d-lg-block">Play</a>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-5 pb-4 pb-lg-0">
+                    <img class="img-fluid rounded w-100" src="images/aqua.png" alt="">
+                </div>
+                <div class="col-lg-7">
+                    <h3 class="mb-4">Legend(s) of Zelda</h3>
+                    <p>
+                        Made as a class project for EECS 494: Intro to Game Development. Features the first dungeon of the original NES class "The Legend of Zelda"
+                        and a custom level where you might feel like you are seeing double. Thank you Melissa Fang for being a great partner!
+                    </p>
+                    <h4>Contributions</h4>
+                    <p>
+                        Like the shiny weapons? I handled all of their functionaility and animations.
+                        The Legend of Zelda is full of rich sound effects and I implemented them in this rendition of the classic game.
+                        Condition based events like opening locked doors, puzzle doors, or enemy-locked doors were part of my duties.
+                        The nostalgic Old Man Room, the perspective-shifting 2D Bow Room, and everything inside of them (besides enemies) also fell into my hands.
+                    </p>
+                    <h4>Toolkit</h4>
+                    <p>
+                        My partner and I created this version of "The Legend of Zelda" through the Unity game engine and C# scripts.
+                        Project management was handled through the Jira Software.
+                        A WebGL build was then hosted to itch.io which you may find below.
+                    </p>
+                    <a href="https://fonsecap.itch.io/legend-of-zelda" class="btn btn-outline-primary d-none d-lg-block">Play</a>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-5 pb-4 pb-lg-0">
+                    <img class="img-fluid rounded w-100" src="images/bird.png" alt="">
+                </div>
+                <div class="col-lg-7">
+                    <h3 class="mb-4">Left Behind</h3>
+                    <p>
+                        Made as a class project for EECS 494: Intro to Game Development. Features a mix of known stamina mechanics
+                        and temporary invincibility mechanics with a flying auto-scroller.
+                    </p>
+                    <h4>Contributions</h4>
+                    <p>
+                        This project was a solo project. Other than the art and audio, I am the sole owner of all 
+                        the details seen in-game. 
+
+                        Some noteworthy methods utilized in the game's creation include level segmentation (for performance maintenance),
+                        ample resource placement, semi-random but accuracte obstacle spawning, and a singelton GameManager procedure.
+
+                        Special thanks to a close friend Dillon Hembree for the bird art.
+                    </p>
+                    <h4>Toolkit</h4>
+                    <p>
+                        I created "Left Behind" through the Unity game engine and C# scripts.
+                        Project management was handled through the Jira Software.
+                        A WebGL build was then hosted to itch.io which you may find below.
+                    </p>
+                    <a href="https://fonsecap.itch.io/left-behind" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
         </div>
