--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="images/card_back.png" alt="">
+                    <img class="img-fluid rounded w-100" src="img/card_back.png" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Ace of Swords</h3>
@@ -179,7 +179,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="images/aqua.png" alt="">
+                    <img class="img-fluid rounded w-100" src="img/aqua.png" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Legend(s) of Zelda</h3>
@@ -205,7 +205,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="images/bird.png" alt="">
+                    <img class="img-fluid rounded w-100" src="img/bird.png" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Left Behind</h3>
