--- a/index.html
+++ b/index.html
@@ -244,14 +244,15 @@
                 <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
             </div>
         </div>
-        <div class="col-lg-7">
-            <h3 class="mb-4">Email</h3>
-            <p>fonsecap@umich.edu</p>
-        </div>
-        <div class="col-lg-7">
-            <h3 class="mb-4">Phone</h3>
-            <p>813-508-9829</p>
-        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h3 class="mb-4">Email</h3>
+                <p>fonsecap@umich.edu</p>
+            </div>
+            <div class="col-lg-8">
+                <h3 class="mb-4">Phone</h3>
+                <p>813-293-6433</p>
+            </div>
     </div>
     <!-- Contact End -->
 
