--- a/index.html
+++ b/index.html
@@ -244,11 +244,6 @@
                 <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <h3 class="mb-4">Email</h3>
-            <p>fonsecap@umich.edu</p>
-            <h3 class="mb-4">Phone</h3>
-            <p>813-293-6433</p>
     </div>
     <!-- Contact End -->
 
@@ -260,6 +255,7 @@
                 <!-- <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/pedro-fonseca-0123b81b3/"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="#about"><ion-icon name="mail-outline"></ion-icon></i></a>
             </div>
             <!-- <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
