--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <!-- <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/pedro-fonseca-0123b81b3/"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#about"><ion-icon name="mail-outline"></ion-icon></i></a>
+                <a class="btn btn-light btn-social mr-2" href="#about"><i class="fab fa-android"></i></a>
             </div>
             <!-- <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
