--- a/index.html
+++ b/index.html
@@ -162,8 +162,20 @@
                     <img class="img-fluid rounded w-100" src="img/treehouse.png" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Witching Hour</h3>
-                    <p>Made for the WolverineSoft 2022 Pumpkin Jam.</p>
+                    <h3 class="mb-4">Witching Hour</h3> 
+                    <p>Made for the WolverineSoft 2022 Pumpkin Jam on a team of 5 entirely new game developers. We were given 48 hours to
+                       construct a game around the theme of "curses".
+                    </p>
+                    <h4>Contributions</h4>
+                    <p>
+                        I worked on the special effects of the ice curse, stamina, and scene setup. In other words, I made the ice projectile slow enemies, created all the scenes
+                        besides the intro video scene, handled the mana system, and implemented the UI.
+                    </p>
+                    <h4>Toolkit</h4>
+                    <p>
+                        Our team developed this game entirely through Unity and C# scripts along with face-to-face team communication.
+                        You can find a windows download below!
+                    </p>
                     <a href="https://fonsecap.itch.io/witching-hour" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
@@ -173,7 +185,21 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Ace of Swords</h3>
-                    <p>Made for the WolverineSoft 2022 Turkey Jam.</p>
+                    <p>Made for the WolverineSoft 2022 Turkey Jam on a team of 4. We were given 48 hours to
+                       construct a game around the theme of "flourish".
+                    </p>
+                    <h4>Contributions</h4>
+                    <p>
+                        I worked with one other partner to do the majority of the programming for the game. This involved setting up
+                        the randomized cards, the simulated battle through the unity animator, the start menu and credits scene, and the combo meter
+                        represented by the blossoms on the tree that allow you to perform an ultimate flourish.
+                    </p>
+                    <h4>Toolkit</h4>
+                    <p>
+                        Our team developed this game entirely through Unity and C# scripts along with face-to-face team communication.
+                        The design of the game employed the team's first use of Coroutines which expanded our options into time-based coding.
+                        A WebGL build was then hosted to itch.io which you may find below!
+                    </p>
                     <a href="https://fonsecap.itch.io/ace-of-swords" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
@@ -198,7 +224,7 @@
                     <p>
                         My partner and I created this version of "The Legend of Zelda" through the Unity game engine and C# scripts.
                         Project management was handled through the Jira Software.
-                        A WebGL build was then hosted to itch.io which you may find below.
+                        A WebGL build was then hosted to itch.io which you may find below!
                     </p>
                     <a href="https://fonsecap.itch.io/legend-of-zelda" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
@@ -231,6 +257,33 @@
                     </p>
                     <a href="https://fonsecap.itch.io/left-behind" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
+                <div class="row align-items-center">
+                    <div class="col-lg-5 pb-4 pb-lg-0">
+                        <img class="img-fluid rounded w-100" src="img/slime.png" alt="">
+                    </div>
+                    <div class="col-lg-7">
+                        <h3 class="mb-4">Slime-Handed</h3>
+                        <p>
+                            Made as the final class project for EECS 494: Intro to Game Development. The development occurred over a month and a half
+                            with playtesting occuring each week.
+                        </p>
+                        <h4>Contributions</h4>
+                        <p>
+                            This project was a 5-person team.
+                            I was the lead level designer. This consisted of level design, puzzle elements through the use of
+                            blue slime-coloring to push items, scene management, and player guidance.
+                        </p>
+                        <h4>Toolkit</h4>
+                        <p>
+                            My team developed "Slime-Handed" through the Unity game engine and C# scripts.
+                            Project management was handled through the Jira Software.
+                            Our artist formed the comic strip art through Adobe After Effects and 
+                            the editing of images and sprites for the purpose of trailers, devblogs, and particle effects, 
+                            were done through GIMP.
+                            You may find a Windows and Mac build for the game below!
+                        </p>
+                        <a href="https://fonsecap.itch.io/slime-handed" class="btn btn-outline-primary d-none d-lg-block">Play</a>
+                    </div>
             </div>
         </div>
     </div>
