--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@
                 <div class="col-lg-7">
                     <h3 class="mb-4">Witching Hour</h3> 
                     <p>Made for the WolverineSoft 2022 Pumpkin Jam on a team of 5 entirely new game developers. We were given 48 hours to
-                       construct a game around the theme of "curses".
+                       construct a game around the theme of "curses". Have you ever wanted to play a mix between PvZ and a shooter game? Well, you can't. But you can get something that is vaguely related to that theme!
+                       Fight off hordes of knights with powerful curses as they crusade against you and your witchy schemes! These knights are well disciplined and walk in perfect rank and file due to their martial expertise. 
+                       The Runic Gem is their target and you are but a small obstacle in between. Survive until the Witching Hour... a time where your might is unstoppable.
+                       Enjoy your Witching Hour!
                     </p>
                     <h4>Contributions</h4>
                     <p>
@@ -186,7 +189,10 @@
                 <div class="col-lg-7">
                     <h3 class="mb-4">Ace of Swords</h3>
                     <p>Made for the WolverineSoft 2022 Turkey Jam on a team of 4. We were given 48 hours to
-                       construct a game around the theme of "flourish".
+                       construct a game around the theme of "flourish". You are challenged to a duel of wits, beauty, and flourish! 
+                       You know each of your opponents moves but do you have the right card up your sleeve to counter each move.  
+                       Go on an duel in this sword-card take on the classic rock-paper-scissors game. 
+                       Maybe you can attempt to COMBO these cards and build up some style that you can finish with an ultimate move. 
                     </p>
                     <h4>Contributions</h4>
                     <p>
@@ -237,7 +243,8 @@
                     <h3 class="mb-4">Left Behind</h3>
                     <p>
                         Made as a class project for EECS 494: Intro to Game Development. Features a mix of known stamina mechanics
-                        and temporary invincibility mechanics with a flying auto-scroller.
+                        and temporary invincibility mechanics with a flying auto-scroller. Migration has already started and you were snoozing off! 
+                        Fly through the the forest avoiding falling snowing and keeping your stamina up with wind bursts to catch up with your flock!
                     </p>
                     <h4>Contributions</h4>
                     <p>
@@ -266,7 +273,12 @@
                     <h3 class="mb-4">Slime-Handed</h3>
                     <p>
                         Made as the final class project for EECS 494: Intro to Game Development. The development occurred over a month and a half
-                        with playtesting occuring each week.
+                        with playtesting occuring each week. I picked a good house to pick my way into. Not a soul inside tonight... I heard the owner keeps a gem around here somewhere. CREEEEEEEAK! Gotcha. Not even one alarm trigg-
+
+                        Caught by a mage in an attempt to steal a transmuting gem, our "heroic" thief becomes nothing but goo. 
+                        Ironically the gem is the only chance at transforming back to human form. As such he must continue the theft... as a slime. 
+                        Sling the thief like a golf ball across 5 shelfs filled with perilous magics left behind to torture slime people who dared to cross the mage. 
+                        Careful. The mage leaves the gem just within your grasp only to watch you squirm.
                     </p>
                     <h4>Contributions</h4>
                     <p>
