--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h1 class="position-absolute text-uppercase text-primary">Education</h1>
             </div>
             <div class="row align-items-center">
-                <h3 class="mb-4">My Education</h3>
+                <h3 class="mb-4">Relevant Courses</h3>
                 <div class="border-left border-primary pt-2 pl-4 ml-2">
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
@@ -190,7 +190,7 @@
                     <h3 class="mb-4">Ace of Swords</h3>
                     <p>Made for the WolverineSoft 2022 Turkey Jam on a team of 4. We were given 48 hours to
                        construct a game around the theme of "flourish". You are challenged to a duel of wits, beauty, and flourish! 
-                       You know each of your opponents moves but do you have the right card up your sleeve to counter each move.  
+                       You know each of your opponents moves, but do you have the right card up your sleeve to counter each move.  
                        Go on an duel in this sword-card take on the classic rock-paper-scissors game. 
                        Maybe you can attempt to COMBO these cards and build up some style that you can finish with an ultimate move. 
                     </p>
@@ -242,7 +242,7 @@
                 <div class="col-lg-7">
                     <h3 class="mb-4">Left Behind</h3>
                     <p>
-                        Made as a class project for EECS 494: Intro to Game Development. Features a mix of known stamina mechanics
+                        Made as a rapid-prototype for EECS 494: Intro to Game Development. Features a mix of known stamina mechanics
                         and temporary invincibility mechanics with a flying auto-scroller. Migration has already started and you were snoozing off! 
                         Fly through the the forest avoiding falling snowing and keeping your stamina up with wind bursts to catch up with your flock!
                     </p>
