--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <h5 class="font-weight-bold mb-1">EECS 494 - Introduction to Game Development</h5>
                         <p class="mb-2"><strong>University of Michigan - Ann Arbor</strong> | <small>2023</small></p>
-                        <p>Dipped my toes into the ocean that is game development. The class began with a 1-month, two-person project where we were expected to recreate the first dunegon of
+                        <p>Dipped my toes into the ocean that is game development. The class began with a 1-month, two-person project where we were expected to recreate the first dungeon of
                             The Legend of Zelda. We then split of into solo projects where we developed a unique game mechanic and showcased it in a small game developed over only 2 weeks. 
                             The rest of the class (2 months) was dedicated to a building a game from the ground up with a 5-person team. These games can be found in the gallery poriton of
                             the portfolio!
