--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#qualification" class="nav-item nav-link">Education</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
+                <a href="https://drive.google.com/file/d/1Njt75hYw0qT0QR3EIex1kf7lQLlL5J8u/view?usp=sharing" class="nav-item nav-link">Resume</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
         </div>
