--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
                     <p>
                         My team developed "Slime-Handed" through the Unity game engine and C# scripts.
                         Project management was handled through the Jira Software.
+                        I made the slime model we used in game through Blender.
                         Our artist formed the comic strip art through Adobe After Effects and 
                         the editing of images and sprites for the purpose of trailers, devblogs, and particle effects, 
                         were done through GIMP.
