--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </p>
                     <h4>Contributions</h4>
                     <p>
-                        Like the shiny weapons? I handled all of their functionaility and animations.
+                        Like the shiny weapons? I handled all of their functionality and animations.
                         The Legend of Zelda is full of rich sound effects and I implemented them in this rendition of the classic game.
                         Condition based events like opening locked doors, puzzle doors, or enemy-locked doors were part of my duties.
                         The nostalgic Old Man Room, the perspective-shifting 2D Bow Room, and everything inside of them (besides enemies) also fell into my hands.
@@ -253,7 +253,7 @@
                         the details seen in-game. 
 
                         Some noteworthy methods utilized in the game's creation include level segmentation (for performance maintenance),
-                        ample resource placement, semi-random but accuracte obstacle spawning, and a singelton GameManager procedure.
+                        ample resource placement, semi-random but accuracte obstacle spawning, and a singleton GameManager procedure.
 
                         Special thanks to a close friend Dillon Hembree for the bird art.
                     </p>
