--- a/index.html
+++ b/index.html
@@ -295,8 +295,9 @@
                         Our artist formed the comic strip art through Adobe After Effects and 
                         the editing of images and sprites for the purpose of trailers, devblogs, and particle effects, 
                         were done through GIMP.
-                        You may find a Windows and Mac build for the game below!
+                        You may find a Windows and Mac build as well as dev blogs for the game below!
                     </p>
+                    <a href="https://www.indiedb.com/members/fonsecap/blogs" class="btn btn-outline-primary d-none d-lg-block">Blogs</a>
                     <a href="https://fonsecap.itch.io/slime-handed" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
