--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         were done through GIMP.
                         You may find a Windows and Mac build as well as dev blogs for the game below!
                     </p>
-                    <a href="https://www.indiedb.com/members/fonsecap/blogs" class="btn btn-outline-primary d-none d-lg-block">Blogs</a>
+                    <a href="https://www.indiedb.com/members/fonsecap/blogs" class="btn btn-outline-primary d-none d-lg-block">Blog</a>
                     <a href="https://fonsecap.itch.io/slime-handed" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
