Added Project Nova

--- a/index.html
+++ b/index.html
@@ -152,6 +152,35 @@
             <hr>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
+                    <img class="img-fluid rounded w-100" src="img/nova_title.png" alt="">
+                </div>
+                <div class="col-lg-7">
+                    <h3 class="mb-4">Project Nova: Cellosseum</h3>
+                    <p>
+                        A case study on the rogue-like, bullet hell Nova Drift featuring endless waves of enemies with unique upgrade paths. 
+                        Built on a team of 49 students over the course of 3 months.
+                    </p>
+                    <h4>Contributions</h4>
+                    <p>
+                        <ul>
+                            <li>Assigned to a programming subdivision of 7 students to implement the game functionality and the encounter-
+                                related requests by the game design team.</li>
+                            <li>Following an AGILE work ethic with tools like Jira, Confluence, and Bitbucket to maintain our project.</li>
+                            <li>Implemented features such as enemy movement patterns, screen wrapping, and hazard systems.</li>
+                          </ul>
+                    </p>
+                    <h4>Toolkit</h4>
+                    <p>
+                        The WolverineSoft team developed Project Nova through the Unity game engine and C# scripts.
+                        Project management was handled through the Jira Software, documentation was recorded in Confluence,
+                        and version control utilized BitBucket which I personally paired with SourceTree.
+                        A build is coming soon as the project is coming to an end soon!
+                    </p>
+                </div>
+            </div>
+            <hr>
+            <div class="row align-items-center">
+                <div class="col-lg-5 pb-4 pb-lg-0">
                     <img class="img-fluid rounded w-100" src="img/aqua.png" alt="">
                 </div>
                 <div class="col-lg-7">
