--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <meta name="viewport" content="width=device-width, initial-scale=1">
                         <style>
                         * {box-sizing: border-box;}
-                        body {font-family: Verdana, sans-serif;}
+                        /* body {font-family: Verdana, sans-serif;} */
                         .mySlides {display: none;}
                         img {vertical-align: middle;}
                         
