--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <meta name="viewport" content="width=device-width, initial-scale=1">
                     <style>
                     * {box-sizing: border-box;}
-                    body {font-family: Verdana, sans-serif;}
+                    body {font-family: Verdana, serif;}
                     .mySlides {display: none;}
                     img {vertical-align: middle;}
                     
@@ -191,6 +191,7 @@
                     <div class="mySlides fade">
                       <div class="numbertext">1 / 3</div>
                       <img src="img/slime1.png" style="width:100%">
+                      <div class="text"></div>
                     </div>
                     
                     <div class="mySlides fade">
