--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     
                     <div class="mySlides fade">
                       <div class="numbertext">1 / 3</div>
-                      <img src="img/slime1.png" style="width:100%">
+                      <img src="img/slime1.jpg" style="width:100%">
                       <div class="text"></div>
                     </div>
                     
