--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             overflow: hidden;
                         }
                         .image-container {
-                            width: 1500px;
+                            width: 1000px;
                             background-color: pink;
                             height: 300px;
                             clear: both;
@@ -163,7 +163,7 @@
                             height: 15px;
                             width: 15px;
                             border-radius: 50px;
-                            background-color: lightgreen;
+                            background-color: rgb(255, 255, 255);
                         }
                         </style>
                     </head>
@@ -173,14 +173,9 @@
                         <span id="slide-2"></span>
                         <span id="slide-3"></span>
                         <div class="image-container">
-                            <img src="img/slime1.png" class="slide" width="500" height="300" />
-                            <img src="img/slime2.png" class="slide" width="500" height="300" />
-                            <img src="img/slime3.png" class="slide" width="500" height="300" />
-                        </div>
-                        <div class="buttons">
-                            <a href="#slide-1"></a>
-                            <a href="#slide-2"></a>
-                            <a href="#slide-3"></a>
+                            <img src="img/slime1.png" class="slide" width="300" height="300" />
+                            <img src="img/slime2.png" class="slide" width="300" height="300" />
+                            <img src="img/slime3.png" class="slide" width="300" height="300" />
                         </div>
                         </div>
                     </body>
