--- a/index.html
+++ b/index.html
@@ -192,18 +192,18 @@
                     <div class="slideshow-container">
                         <div class="mySlides fade">
                             <div class="numbertext">1 / 3</div>
-                            <img src="https://www.tutorialspoint.com/images/logo.png" style="width:100%">
-                            <div class="text">Welcome to Tutorials Point</div>
+                            <img src="img/slime1.png" style="width:100%">
+                            <div class="text"></div>
                             </div>
                             <div class="mySlides fade">
                                 <div class="numbertext">2 / 3</div>
-                                <img src="https://www.tutorialspoint.com/assets/questions/media/64678/5.png" style="width:100%;">
-                                <div class="text">Start your Learning Today !</div>
+                                <img src="img/slime2.png" style="width:100%;">
+                                <div class="text">Maze of Books</div>
                             </div>
                             <div class="mySlides fade">
                                 <div class="numbertext">3 / 3</div>
-                                <img src="https://www.tutorialspoint.com/about/images/about.jpg" style="width:100%">
-                                <div class="text">About Us</div>
+                                <img src="img/slime3.png" style="width:100%">
+                                <div class="text">Mage Chase</div>
                             </div>
                             <a class="prev" onclick="plusSlides(-1)">❮</a>
                             <a class="next" onclick="plusSlides(1)">❯</a>
