--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                                 <img src="img/slime3.png" style="width:100%">
                                 <div class="text">Mage Chase</div>
                             </div>
-                            <a class="prev" onclick="plusSlides(-1)">❮</a>
-                            <a class="next" onclick="plusSlides(1)">❯</a>
+                            <a class="prev" onclick="plusSlides(-1)">&#852;</a>
+                            <a class="next" onclick="plusSlides(1)">&#853;</a>
                     </div>
                     <br>
                     <div style="text-align:center">
