--- a/index.html
+++ b/index.html
@@ -120,124 +120,102 @@
                     <head>
                     <meta name="viewport" content="width=device-width, initial-scale=1">
                     <style>
-                        * {box-sizing: border-box}
-                        body {font-family: Verdana, sans-serif; margin:0}
-                        .mySlides {display: none}
-                        img {vertical-align: middle;}
-                        /* Slideshow container */
-                        .slideshow-container {
-                            max-width: 1000px;
-                            position: relative;
-                            margin: auto;
-                        }
-                        /* Next & previous buttons */
-                        .prev, .next {
-                            cursor: pointer;
-                            position: absolute;
-                            top: 50%;
-                            width: auto;
-                            padding: 16px;
-                            margin-top: -22px;
-                            color: white;
-                            font-weight: bold;
-                            font-size: 18px;
-                            transition: 0.6s ease;
-                            border-radius: 0 3px 3px 0;
-                            user-select: none;
-                        }
-                        /* Position the "next button" to the right */
-                        .next {
-                            right: 0;
-                            border-radius: 3px 0 0 3px;
-                        }
-                        /* On hover, add a black background color with a little bit seethrough */
-                        .prev:hover, .next:hover {
-                            background-color: rgba(0,0,0,0.8);
-                        }
-                        /* Caption text */
-                        .text {
-                            color: black;
-                            font-size: 15px;
-                            padding: 8px 12px;
-                            position: absolute;
-                            bottom: 8px;
-                            width: 100%;
-                            text-align: center;
-                        }
-                        /* Number text (1/3 etc) */
-                        .numbertext {
-                            color: #f2f2f2;
-                            font-size: 12px;
-                            padding: 8px 12px;
-                            position: absolute;
-                            top: 0;
-                        }
-                        /* The dots/bullets/indicators */
-                        .dot {
-                            cursor: pointer;
-                            height: 15px;
-                            width: 15px;
-                            margin: 0 2px;
-                            background-color: #bbb;
-                            border-radius: 50%;
-                            display: inline-block;
-                            transition: background-color 0.6s ease;
-                        }
-                        .active, .dot:hover {
-                            background-color: #717171;
-                        }
+                    * {
+                    box-sizing: border-box;
+                    }
+
+                    body {
+                    margin: 0;
+                    font-family: Arial;
+                    }
+
+                    /* The grid: Four equal columns that floats next to each other */
+                    .column {
+                    float: left;
+                    width: 25%;
+                    padding: 10px;
+                    }
+
+                    /* Style the images inside the grid */
+                    .column img {
+                    opacity: 0.8; 
+                    cursor: pointer; 
+                    }
+
+                    .column img:hover {
+                    opacity: 1;
+                    }
+
+                    /* Clear floats after the columns */
+                    .row:after {
+                    content: "";
+                    display: table;
+                    clear: both;
+                    }
+
+                    /* The expanding image container */
+                    .container {
+                    position: relative;
+                    display: none;
+                    }
+
+                    /* Expanding image text */
+                    #imgtext {
+                    position: absolute;
+                    bottom: 15px;
+                    left: 15px;
+                    color: white;
+                    font-size: 20px;
+                    }
+
+                    /* Closable button inside the expanded image */
+                    .closebtn {
+                    position: absolute;
+                    top: 10px;
+                    right: 15px;
+                    color: white;
+                    font-size: 35px;
+                    cursor: pointer;
+                    }
                     </style>
                     </head>
                     <body>
-                    <div class="slideshow-container">
-                        <div class="mySlides fade">
-                            <div class="numbertext">1 / 3</div>
-                            <img src="img/slime1.png" style="width:100%">
-                            <div class="text"></div>
-                            </div>
-                            <div class="mySlides fade">
-                                <div class="numbertext">2 / 3</div>
-                                <img src="img/slime2.png" style="width:100%;">
-                                <div class="text">Maze of Books</div>
-                            </div>
-                            <div class="mySlides fade">
-                                <div class="numbertext">3 / 3</div>
-                                <img src="img/slime3.png" style="width:100%">
-                                <div class="text">Mage Chase</div>
-                            </div>
-                            <a class="prev" onclick="plusSlides(-1)">&#852;</a>
-                            <a class="next" onclick="plusSlides(1)">&#853;</a>
-                    </div>
-                    <br>
+
                     <div style="text-align:center">
-                        <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
+                    <h2>Tabbed Image Gallery</h2>
+                    <p>Click on the images below:</p>
                     </div>
+
+                    <!-- The four columns -->
+                    <div class="row">
+                    <div class="column">
+                        <img src="img/slime1.png" alt="" style="width:100%" onclick="myFunction(this);">
+                    </div>
+                    <div class="column">
+                        <img src="img/slime2.png" alt="" style="width:100%" onclick="myFunction(this);">
+                    </div>
+                    <div class="column">
+                        <img src="img/slime3.png" alt="" style="width:100%" onclick="myFunction(this);">
+                    </div>
+                    <div class="column">
+                        <img src="img/slime1.png" alt="" style="width:100%" onclick="myFunction(this);">
+                    </div>
+                    </div>
+
+                    <div class="container">
+                    <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+                    <img id="expandedImg" style="width:100%">
+                    <div id="imgtext"></div>
+                    </div>
+
                     <script>
-                        var slideIndex = 1;
-                        showSlides(slideIndex);
-                        function plusSlides(n) {
-                            showSlides(slideIndex += n);
-                        }
-                        function currentSlide(n) {
-                            showSlides(slideIndex = n);
-                        }
-                        function showSlides(n) {
-                            var i;
-                            var slides = document.getElementsByClassName("mySlides");
-                            var dots = document.getElementsByClassName("dot");
-                            if (n > slides.length) {slideIndex = 1}
-                            if (n < 1) {slideIndex = slides.length}
-                            for (i = 0; i < slides.length; i++) {
-                                slides[i].style.display = "none";
-                            }
-                            for (i = 0; i < dots.length; i++) {
-                                dots[i].className = dots[i].className.replace(" active", "");
-                            }
-                            slides[slideIndex-1].style.display = "block";
-                            dots[slideIndex-1].className += " active";
-                        }
+                    function myFunction(imgs) {
+                    var expandImg = document.getElementById("expandedImg");
+                    var imgText = document.getElementById("imgtext");
+                    expandImg.src = imgs.src;
+                    imgText.innerHTML = imgs.alt;
+                    expandImg.parentElement.style.display = "block";
+                    }
                     </script>
                     </body>
                     </html>
