--- a/index.html
+++ b/index.html
@@ -115,7 +115,77 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/slime1.png" alt="">
+                    <!DOCTYPE html>
+                    <html>
+                    <head>
+                        <style>
+                        .slider {
+                            width: 500px;
+                            height: 300px;
+                            background-color: rgb(0, 0, 0);
+                            margin-left: auto;
+                            margin-right: auto;
+                            margin-top: 0px;
+                            text-align: center;
+                            overflow: hidden;
+                        }
+                        .image-container {
+                            width: 1500px;
+                            background-color: rgb(0, 0, 0);
+                            height: 300px;
+                            clear: both;
+                            position: relative;
+                            -webkit-transition: left 2s;
+                            -moz-transition: left 2s;
+                            -o-transition: left 2s;
+                            transition: left 2s;
+                        }
+                        .slide {
+                            float: left;
+                            margin: 0px;
+                            padding: 0px;
+                            position: relative;
+                        }
+                        #slide-1:target ~ .image-container {
+                            left: 0px;
+                        }
+                        #slide-2:target ~ .image-container {
+                            left: -500px;
+                        }
+                        #slide-3:target ~ .image-container {
+                            left: -1000px;
+                        }
+                        .buttons {
+                            position: relative;
+                            top: -20px;
+                        }
+                        .buttons a {
+                            display: inline-block;
+                            height: 15px;
+                            width: 15px;
+                            border-radius: 50px;
+                            background-color: rgb(255, 255, 255);
+                        }
+                        </style>
+                    </head>
+                    <body>
+                        <div class="slider">
+                        <span id="slide-1"></span>
+                        <span id="slide-2"></span>
+                        <span id="slide-3"></span>
+                        <div class="image-container">
+                            <img src="img/slime1.png" class="slide" width="500" height="300" />
+                            <img src="img/slime2.png" class="slide" width="500" height="300" />
+                            <img src="img/slime3.png" class="slide" width="500" height="300" />
+                        </div>
+                        <div class="buttons">
+                            <a href="#slide-1"></a>
+                            <a href="#slide-2"></a>
+                            <a href="#slide-3"></a>
+                        </div>
+                        </div>
+                    </body>
+                    </html>
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Slime-Handed</h3>
