--- a/index.html
+++ b/index.html
@@ -139,40 +139,48 @@
 
                     <div class="slideshow-container">
                     <div class="mySlides">
-                        <img class="slide-img" src="img/slime1.png" alt="">
+                        <img class="slide-img" src="img/slime1.png" alt="Image 1">
                     </div>
 
                     <div class="mySlides">
-                        <img class="slide-img" src="img/slime2.png" alt="">
+                        <img class="slide-img" src="img/slime2.png" alt="Image 2">
                     </div>
 
                     <div class="mySlides">
-                        <img class="slide-img" src="img/slime3.png" alt="">
+                        <img class="slide-img" src="img/slime3.png" alt="Image 3">
                     </div>
+                    
+                    <button onclick="plusSlides(-1)">Previous</button>
+                    <button onclick="plusSlides(1)">Next</button>
                     </div>
 
                     <script>
-                    let slideIndex = 0;
-                    showSlides();
+                    let slideIndex = 1;
+                    showSlides(slideIndex);
 
-                    function showSlides() {
+                    function plusSlides(n) {
+                        showSlides(slideIndex += n);
+                    }
+
+                    function showSlides(n) {
                         let i;
                         const slides = document.getElementsByClassName("mySlides");
+
+                        if (n > slides.length) {
+                        slideIndex = 1;
+                        }
+                        if (n < 1) {
+                        slideIndex = slides.length;
+                        }
 
                         for (i = 0; i < slides.length; i++) {
                         slides[i].style.display = "none";
                         }
 
-                        slideIndex++;
-
-                        if (slideIndex > slides.length) {
-                        slideIndex = 1;
-                        }
-
                         slides[slideIndex - 1].style.display = "block";
-                        setTimeout(showSlides, 2000); // Change slide every 2 seconds
                     }
                     </script>
+
                     </body>
                     </html>
                 </div>
