--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         
                         .slide-img {
                         width: 100%;
-                        height: auto;
+                        height: 100%;
                         }
                     </style>
                     </head>
