--- a/index.html
+++ b/index.html
@@ -131,7 +131,18 @@
                         
                         .slide-img {
                         width: 100%;
-                        height: 100%;
+                        height: auto;
+                        }
+
+                        .slideshow-controls {
+                        text-align: center;
+                        margin-top: 10px;
+                        }
+
+                        .slideshow-button {
+                        padding: 5px 10px;
+                        font-size: 16px;
+                        cursor: pointer;
                         }
                     </style>
                     </head>
@@ -139,19 +150,21 @@
 
                     <div class="slideshow-container">
                     <div class="mySlides">
-                        <img class="slide-img" src="img/slime1.png" alt="Image 1">
+                        <img class="slide-img" src="image1.jpg" alt="Image 1">
                     </div>
 
                     <div class="mySlides">
-                        <img class="slide-img" src="img/slime2.png" alt="Image 2">
+                        <img class="slide-img" src="image2.jpg" alt="Image 2">
                     </div>
 
                     <div class="mySlides">
-                        <img class="slide-img" src="img/slime3.png" alt="Image 3">
+                        <img class="slide-img" src="image3.jpg" alt="Image 3">
                     </div>
-                    
-                    <button onclick="plusSlides(-1)">Previous</button>
-                    <button onclick="plusSlides(1)">Next</button>
+                    </div>
+
+                    <div class="slideshow-controls">
+                    <button class="slideshow-button" onclick="plusSlides(-1)">Previous</button>
+                    <button class="slideshow-button" onclick="plusSlides(1)">Next</button>
                     </div>
 
                     <script>
