--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
 
                     <div class="slideshow-container">
                     <div class="mySlides">
-                        <img class="slide-img" src="image1.jpg" alt="Image 1">
+                        <img class="slide-img" src="img/slime1.png" alt="">
                     </div>
 
                     <div class="mySlides">
-                        <img class="slide-img" src="image2.jpg" alt="Image 2">
+                        <img class="slide-img" src="img/slime2.png" alt="">
                     </div>
 
                     <div class="mySlides">
-                        <img class="slide-img" src="image3.jpg" alt="Image 3">
+                        <img class="slide-img" src="img/slime3.png" alt="">
                     </div>
                     </div>
 
