--- a/index.html
+++ b/index.html
@@ -270,15 +270,15 @@
                     <body>
 
                     <div class="slideshow-container">
-                    <div class="mySlides">
+                    <div class="mySlides1">
                         <img class="slide-img" src="img/nova_title.png" alt="">
                     </div>
 
-                    <div class="mySlides">
+                    <div class="mySlides1">
                         <img class="slide-img" src="img/nova2.png" alt="">
                     </div>
 
-                    <div class="mySlides">
+                    <div class="mySlides1">
                         <img class="slide-img" src="img/nova3.png" alt="">
                     </div>
                     </div>
@@ -298,7 +298,7 @@
 
                     function showSlides(n) {
                         let i;
-                        const slides = document.getElementsByClassName("mySlides");
+                        const slides = document.getElementsByClassName("mySlides1");
 
                         if (n > slides.length) {
                         slideIndex1 = 1;
