--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
                     <body>
 
                     <div class="slideshow-container">
-                    <div class="mySlides">
+                    <div class="mySlides2">
                         <img class="slide-img" src="img/nova_title.png" alt="">
                     </div>
 
-                    <div class="mySlides">
+                    <div class="mySlides2">
                         <img class="slide-img" src="img/nova2.png" alt="">
                     </div>
 
-                    <div class="mySlides">
+                    <div class="mySlides2">
                         <img class="slide-img" src="img/nova3.png"  alt="">
                     </div>
                     </div>
@@ -301,7 +301,7 @@
 
                     function showSlides2(n) {
                         let i;
-                        const slides = document.getElementsByClassName("mySlides");
+                        const slides = document.getElementsByClassName("mySlides2");
 
                         if (n > slides.length) {
                         slideIndex2 = 1;
