--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
                     </div>
 
                     <div class="slideshow-controls">
-                    <button class="slideshow-button" onclick="plusSlides(-1)">Previous</button>
-                    <button class="slideshow-button" onclick="plusSlides(1)">Next</button>
+                    <button class="slideshow-button" onclick="plusSlides2(-1)">Previous</button>
+                    <button class="slideshow-button" onclick="plusSlides2(1)">Next</button>
                     </div>
 
                     <script>
